Fixed unable to remove selector elements on smaller screens. Fixed thrash button in sidebar not hiding when sidebar is closed. Made sidebar buttons highlight based on which sidebars are open.

--- a/app/dashboard/dashboard.component.css
+++ b/app/dashboard/dashboard.component.css
@@ -28,15 +28,26 @@
     flex: 1 1 auto;
     transition: all 0.5s ease;
 }
+#wrapper:not(.toggled) #menu-toggle {
+    background-color: #b1d8e1;
+}
+
 #wrapper.toggledSelector #side-bar-selector {
     width: 0;
     flex: 1 1 auto;
     transition: all 0.5s ease;
 }
+#wrapper:not(.toggledSelector) #menu-selector-toggle {
+    background-color: #b1d8e1;
+}
+
 #wrapper.toggledChart #side-bar-chart {
     width: 0;
     flex: 1 1 auto;
     transition: all 0.5s ease;
+}
+#wrapper:not(.toggledChart) #menu-chart-toggle {
+    background-color: #b1d8e1;
 }
 
 @media(min-width:768px) {
