--- a/app/side-nav-chart/side-chart.component.css
+++ b/app/side-nav-chart/side-chart.component.css
@@ -265,14 +265,3 @@
     color: #b9b9b9; /*Gray*/
 }
 
-#itemBtn{
-    display: inline-block;
-    position: absolute;
-    right: 2%;
-    font-size: small;
-}
-
-#itemText{
-    display: inline-block;
-    flex: 1 1;
-}
