--- a/app/side-nav-selector/side-selector.component.css
+++ b/app/side-nav-selector/side-selector.component.css
@@ -287,6 +287,7 @@
     display: inline-block;
     position: absolute;
     right: 2%;
+    top: 2%;
     font-size: small;
 }
 
