--- a/app/side-nav/side.component.css
+++ b/app/side-nav/side.component.css
@@ -22,7 +22,7 @@
 }
 
 .fixedButtons{
-
+   overflow: hidden;
 }
 .fixedButtons .form-group{
     overflow: hidden;
